Create contents folder

--- a/skills.html
+++ b/skills.html
@@ -45,17 +45,17 @@
 						<header>
 							<div class="inner">
 								<h2>My Skill Set</h2>
-								<a href="SQL/SQL.html" target="_blank">
+								    <a href="contents/SQL/SQL.html" target="_blank">
 									<img src="resources/icons/logo_sql.png" width="50"></a>
-									<a href="HTML/HTML.html" target="_blank">
+									<a href="contents/HTML/HTML.html" target="_blank">
 									<img src="resources/icons/logo_html.png" width="50"></a>
-									<a href="CSS/CSS.html" target="_blank">
+									<a href="contents/CSS/CSS.html" target="_blank">
 									<img src="resources/icons/logo_css.png" width="47"></a>
-									<a href="JS/JS.html" target="_blank">
+									<a href="contents/JS/JS.html" target="_blank">
 									<img src="resources/icons/logo_js.png" width="51"></a>
-									<a href="PYSPARK/index.html" target="_blank">
+									<a href="contents/PYSPARK/index.html" target="_blank">
 									<img src="resources/icons/logo_spark.png" width="43"></a>
-									<a href="PYSPARK/index.html" target="_blank">
+									<a href="contents/PYSPARK/index.html" target="_blank">
 									<img src="resources/icons/logo_sklearn.png" width="43"></a>
 							</div>
 						</header>
