Change resources folder to contents_resources

--- a/contents/CSS/CSS.html
+++ b/contents/CSS/CSS.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>CSS</title>
-        <link rel="stylesheet" href="/resources/styles/mainStyles.css">
-        <link rel="icon" type="image/png" href="/resources/icons/logo_css.png">
+        <link rel="stylesheet" href="/contents_resources/styles/mainStyles.css">
+        <link rel="icon" type="image/png" href="/contents_resources/icons/logo_css.png">
         
     </head>
 
     <body>
          <div class="navbar">
-             <a class="main" href="#navh00"> <img src ="/resources/icons/logo_css.png" width="15"> </a>
+             <a class="main" href="#navh00"> <img src ="/contents_resources/icons/logo_css.png" width="15"> </a>
              <a href="#navh01">CSS</a>
              <a href="#navh02">HEAD</a>
              <div class="dropdown">
@@ -34,7 +34,7 @@
 
         <div id = "navc00"></div>
         <p style="padding:20px"></p>
-        <h1><img src ="/resources/icons/logo_css.png" width="50"> CSS Essentials</h1>
+        <h1><img src ="/contents_resources/icons/logo_css.png" width="50"> CSS Essentials</h1>
         <p>CSS stands for Cascading Style Sheets.</p>
         <p>CSS can be added to HTML documents in 3 ways:</p>
 
@@ -620,7 +620,7 @@
                 <td>list-style-image</td>
                 <td>list-style-image: url('../resource/images/ani_smwcoin.gif');</td>
                 <td>
-                    <ul style="list-style-image: url('../resources/images/ani_smwcoin.gif');">
+                    <ul style="list-style-image: url('/contents_resources/images/ani_smwcoin.gif');">
                         <li>list-style-image</li> 
                     </ul>
                 </td>
