--- a/contents/JS/JS.html
+++ b/contents/JS/JS.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="/resources/styles/mainStyles.css">
+        <link rel="stylesheet" href="/contents_resources/styles/mainStyles.css">
         <title>JS</title>
-        <link rel="icon" type="image/png" href="/resources/icons/logo_js.png">
+        <link rel="icon" type="image/png" href="/contents_resources/icons/logo_js.png">
 
     </head>
     <body>
       <div class="navbar">
-          <a class="main" href="#navh00"> <img src ="/resources/icons/logo_js.png" width="15"> </a>
+          <a class="main" href="#navh00"> <img src ="/contents_resources/icons/logo_js.png" width="15"> </a>
           <a href="#nav01">INTRO</a>
           <div class="dropdown">
             <button class="dropbtn">BASIC ▾
@@ -66,8 +66,8 @@
 
 <div id = "home"></div>
 <p style="padding:20px"></p>
-<img src="/resources/icons/logo_js.png" style="float:left;width:30px;"> 
-<h1> Javascript Essentials</h1>
+<img src="/contents_resources/icons/logo_js.png" style="float:left;width:30px;"> 
+<h1> JS Essentials</h1>
 <br><br>
 <p>
   JavaScript and Java are completely different languages, both in concept and design.<br>
