--- a/code.html
+++ b/code.html
@@ -110,7 +110,14 @@
 										</div>
 									</section>
 
-
+        <!-- Footer -->
+					<section id="footer">
+						<div class="inner">
+									<ul class="copyright">
+										<li>&copy; Jingwora All rights reserved.</li>
+									</ul>
+						</div>
+					</section>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
