--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 								<li class="icon brands fa-instagram"><a href="#">instagram.com/jingwora</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Jingwora All rights reserved.</li>
 							</ul>
 						</div>
 					</section>
