Add Coffee Cup to contact

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/animation_coffee.css" />
+
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -14,7 +16,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">CONTACT</a></h1>
+						<h1><a href="index.html">Get in Touch</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -36,12 +38,22 @@
 
 				<!-- Wrapper -->
 					<section id="wrapper">
-						<header>
-							<div class="inner">
-								<h2>Hi</h2>
-								<p></p>
+							<div >
+								<p>
+									<div class="cup">
+										<ul class="smoke">
+											<li class="smoke"></li>
+											<li class="smoke"></li>
+											<li class="smoke"></li>
+											<li class="smoke"></li>
+										</ul>
+										<!-- <div class="plate"></div> -->
+									</div>
+								</p>
 							</div>
-						</header>
+					</section>
+					<p style="padding: 100px;"></p>
+
 
 				<!-- Footer -->
 					<section id="footer">
