--- a/skills.html
+++ b/skills.html
@@ -45,6 +45,7 @@
 						<header>
 							<div class="inner">
 								<h2>My Skill Set</h2>
+								<p>When Art Meets Science</p>
 							</div>
 						</header>
 
@@ -56,7 +57,7 @@
 					<!-- One -->
 						<section id="one" class="wrapper spotlight style1">
 							<div class="inner">
-								<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image"><img src="images/data_analyst.png" alt="" /></a>
 								<div class="content">
 									<h2 class="major">Data Analysis</h2>
 									<p>Tableau and Power BI report</p>
@@ -68,7 +69,7 @@
 					<!-- Two -->
 						<section id="two" class="wrapper alt spotlight style2">
 							<div class="inner">
-								<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="#" class="image"><img src="images/data_scientist.png" alt="" /></a>
 								<div class="content">
 									<h2 class="major">Data Science</h2>
 									<p>Python (Numpy, Pandas, Sklearn, Statsmodels, Tensorflow, Matplotlib)</p>
@@ -83,7 +84,7 @@
 					<!-- Three -->
 						<section id="three" class="wrapper spotlight style3">
 							<div class="inner">
-								<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+								<a href="#" class="image"><img src="images/data_engineer.png" alt="" /></a>
 								<div class="content">
 									<h2 class="major">Data Engineer</h2>
 									<p>SQL, Pyspark, Databricks </p>
@@ -95,7 +96,7 @@
 					<!-- four -->
 					<section id="two" class="wrapper alt spotlight style2">
 						<div class="inner">
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+							<a href="#" class="image"><img src="images/web_developer.png" alt="" /></a>
 							<div class="content">
 								<h2 class="major">Web Developer</h2>
 								<p>HTML, CSS, JS, React Native, CMS(Wordpress), Google Analytics, Marketing Automation(Kairos3</p>
@@ -108,7 +109,7 @@
 					<!-- Five -->
 					<section id="three" class="wrapper spotlight style3">
 						<div class="inner">
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+							<a href="#" class="image"><img src="images/cloud_engineer.png" alt="" /></a>
 							<div class="content">
 								<h2 class="major">Cloud Engineer</h2>
 								<p>Azure (VM, Compute, App Service, Kubernetes Service,VNets, Blob Storage, SQL Database)</p>
