Change font size

--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
 		<!-- Message -->
     <div id="particles-js"></div>
     <div class="text">
-      <h2>Hi, My name is Kritdikoon Woraitthinan</h2>
+      <h2 class="typing">Hi, My name is Kritdikoon Woraitthinan</h2>
       <hr style="border: 1px solid #00356B;">
-      <h2 style="color: orange;">I am 
+      <h2 class="typing" style="color: orange;">I am 
         <span
           class="txt-rotate"
           data-period="2000"
           data-rotate='[ "a Data Analyst.", "a Data Scientist.", "a Data Engineer.", "a Web Developer.", "just a Data-Driven Problem Solver." ]'></span>
       </h2>
       <hr style="border: 1px solid #00356B;">
-      <h2>Nice to meet everyone.</h2>
+      <h2 class="typing">Nice to meet everyone.</h2>
     </div>
 
 		<!-- Scripts -->
