update skills page

--- a/skills.html
+++ b/skills.html
@@ -57,10 +57,13 @@
 					<!-- One -->
 						<section id="one" class="wrapper spotlight style1">
 							<div class="inner">
-								<a href="#" class="image"><img src="images/data_analyst.png" alt="" /></a>
+								<a href="#" class="image"><img src="images/data_analyst.png" style="width:150px;" alt="" /></a>
 								<div class="content">
 									<h2 class="major">Data Analysis</h2>
-									<p>Tableau and Power BI report</p>
+									<p>
+										10 years+ in business intelligent development for variouse business needs including retail management, members analysis, marketing analysis, production management, supply chain management, financial repot and more.
+									</p>
+									<p>Main tools: Tableau and Power BI report</p>
 									<a href="#" class="special"></a>
 								</div>
 							</div>
@@ -69,13 +72,20 @@
 					<!-- Two -->
 						<section id="two" class="wrapper alt spotlight style2">
 							<div class="inner">
-								<a href="#" class="image"><img src="images/data_scientist.png" alt="" /></a>
+								<a href="#" class="image"><img src="images/data_scientist.png" style="width:150px;" alt="" /></a>
 								<div class="content">
 									<h2 class="major">Data Science</h2>
-									<p>Python (Numpy, Pandas, Sklearn, Statsmodels, Tensorflow, Matplotlib)</p>
-									<p>Azure (Azure ML Studio, Azure ML Service, AutoML, Cognitive Services-Speech, Vision, Image, Language, Sentiment)</p>
-									<p>Google (Google Colab)</p>
-									<p>SPSS Statisitic, SPSS Modelor</p>
+									<p>
+										Create Analytic model and based on CI/CD development.
+										Integrate AI model into BI report.
+									</p>
+									<p>
+										Tools: <br>
+										Python (Numpy, Pandas, Sklearn, Statsmodels, Tensorflow, Matplotlib)<br>
+									    Azure (Azure ML Studio, Azure ML Service, AutoML, Cognitive Services-Speech, Vision, Image, Language, Sentiment)<br>
+									    Google (Google Colab)<br>
+										SPSS Statisitic, SPSS Modelor<br>
+									</p>
 									<a href="#" class="special">Learn more</a>
 								</div>
 							</div>
@@ -84,7 +94,7 @@
 					<!-- Three -->
 						<section id="three" class="wrapper spotlight style3">
 							<div class="inner">
-								<a href="#" class="image"><img src="images/data_engineer.png" alt="" /></a>
+								<a href="#" class="image"><img src="images/data_engineer.png" style="width:150px;" alt="" /></a>
 								<div class="content">
 									<h2 class="major">Data Engineer</h2>
 									<p>SQL, Pyspark, Databricks </p>
@@ -96,7 +106,7 @@
 					<!-- four -->
 					<section id="two" class="wrapper alt spotlight style2">
 						<div class="inner">
-							<a href="#" class="image"><img src="images/web_developer.png" alt="" /></a>
+							<a href="#" class="image"><img src="images/web_developer.png" style="width:150px;" alt="" /></a>
 							<div class="content">
 								<h2 class="major">Web Developer</h2>
 								<p>HTML, CSS, JS, React Native, CMS(Wordpress), Google Analytics, Marketing Automation(Kairos3</p>
@@ -109,7 +119,7 @@
 					<!-- Five -->
 					<section id="three" class="wrapper spotlight style3">
 						<div class="inner">
-							<a href="#" class="image"><img src="images/cloud_engineer.png" alt="" /></a>
+							<a href="#" class="image"><img src="images/cloud_engineer.png" style="width:150px; alt="" /></a>
 							<div class="content">
 								<h2 class="major">Cloud Engineer</h2>
 								<p>Azure (VM, Compute, App Service, Kubernetes Service,VNets, Blob Storage, SQL Database)</p>
