--- a/skills.html
+++ b/skills.html
@@ -119,7 +119,7 @@
 					<!-- Five -->
 					<section id="three" class="wrapper spotlight style3">
 						<div class="inner">
-							<a href="#" class="image"><img src="images/cloud_engineer.png" style="width:150px; alt="" /></a>
+							<a href="#" class="image"><img src="images/cloud_engineer.png" style="width:150px;" alt="" /></a>
 							<div class="content">
 								<h2 class="major">Cloud Engineer</h2>
 								<p>Azure (VM, Compute, App Service, Kubernetes Service,VNets, Blob Storage, SQL Database)</p>
