--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 							<ul class="links">
                 <li><a href="index.html">SAY HI!</a></li>
                 <li><a href="skills.html">SKILLS</a></li>
-                <li><a href="code.html">CODE</a></li>
-                <li><a href="contact.html">Get in touch</a></li>
+                <li><a href="projects.html">PROJECTS</a></li>
+                <li><a href="contents.html">CONTENTS</a></li>
+                <li><a href="contacts.html">GET IN TOUCH</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
