Update skills page

--- a/skills.html
+++ b/skills.html
@@ -46,7 +46,7 @@
 						<header>
 							<div class="inner">
 								<h2>My Skill Set</h2>
-								<p>When Art Meets Science</p>
+								<blockquote>"When Art Meets Science"</blockquote>
 							</div>
 						</header>
 
@@ -62,10 +62,10 @@
 								<div class="content">
 									<h2 class="major">Data Analysis</h2>
 									<p>
-										10 years+ in business intelligent development for variouse business needs including retail management, members analysis, marketing analysis, production management, supply chain management, financial repot and more.
+										More than 10 years experience in BI(business intelligent) development for variouse business needs including retail management, customer relationship management, marketing analysis, production management, supply chain management, financial repot and more.
 									</p>
-									<p>Main tools: Tableau and Power BI report</p>
-									<a href="#" class="special"></a>
+									<p>Tools: Tableau and Power BI report</p>
+									<a href="projects.html" class="special">Learn more</a>
 								</div>
 							</div>
 						</section>
@@ -77,17 +77,17 @@
 								<div class="content">
 									<h2 class="major">Data Science</h2>
 									<p>
-										Create Analytic model and based on CI/CD development.
-										Integrate AI model into BI report.
+										Create end-to-end dataflow for Machine learning devlopment from data preparation, feature engineering, model creation, model evaluation. Maintain full  process of machine life cycle via DevOps process. Develop verious AI infrastructures including AIas, SaaS, PaaS, IaaS, Edge deployment.
 									</p>
 									<p>
 										Tools: <br>
 										Python (Numpy, Pandas, Sklearn, Statsmodels, Tensorflow, Matplotlib)<br>
 									    Azure (Azure ML Studio, Azure ML Service, AutoML, Cognitive Services-Speech, Vision, Image, Language, Sentiment)<br>
-									    Google (Google Colab)<br>
+									    Google (Google Colab) SparkML<br>
 										SPSS Statisitic, SPSS Modelor<br>
+										DevOps, MLflow, Azure ML Service
 									</p>
-									<a href="#" class="special">Learn more</a>
+									<a href="projects.html" class="special">Learn more</a>
 								</div>
 							</div>
 						</section>
@@ -98,8 +98,9 @@
 								<a href="#" class="image"><img src="images/data_engineer.png" style="width:150px;" alt="" /></a>
 								<div class="content">
 									<h2 class="major">Data Engineer</h2>
-									<p>SQL, Pyspark, Databricks </p>
-									<a href="#" class="special">Learn more</a>
+									<p>Develop ETL dataflow system in various infra-structure including on-premise, cloud, hybrid and distributed compting.</p>
+									<p>SQL server, MySQL, Dataflows, Databricks </p>
+									<a href="projects.html" class="special">Learn more</a>
 								</div>
 							</div>
 						</section>
@@ -110,22 +111,29 @@
 							<a href="#" class="image"><img src="images/web_developer.png" style="width:150px;" alt="" /></a>
 							<div class="content">
 								<h2 class="major">Web Developer</h2>
-								<p>HTML, CSS, JS, React Native, CMS(Wordpress), Google Analytics, Marketing Automation(Kairos3</p>
-								<a href="#" class="special"></a>
+								<p>
+									UI, UX, and front-end web developing to achieve responsive designs for cohesive user experience. <br>
+                                    Create statics website and CMS based website.
+								</p>
+								<p>
+									HTML, CSS, JS, React Native, CMS(Wordpress), Google Analytics, Marketing Automation(Kairos3)<br>
+                                    Adobe Illustrator
+								</p>
+								<a href="projects.html" class="special">Learn more</a>
 							</div>
 						</div>
 					</section>
 						
-
 					<!-- Five -->
 					<section id="three" class="wrapper spotlight style3">
 						<div class="inner">
 							<a href="#" class="image"><img src="images/cloud_engineer.png" style="width:150px;" alt="" /></a>
 							<div class="content">
 								<h2 class="major">Cloud Engineer</h2>
+								<p>Design and build secured cloud structure to support BI and AI platform.</p>
 								<p>Azure (VM, Compute, App Service, Kubernetes Service,VNets, Blob Storage, SQL Database)</p>
 								<p>Google (Cloud Storage, BigQuery)</p>
-								<a href="#" class="special">Learn more</a>
+								<a href="projects.html" class="special">Learn more</a>
 							</div>
 						</div>
 					</section>
