Revise Projects page

--- a/skills.html
+++ b/skills.html
@@ -60,7 +60,7 @@
 							<div class="inner">
 								<a href="#" class="image"><img src="images/data_analyst.png" style="width:150px;" alt="" /></a>
 								<div class="content">
-									<h2 class="major">Data Analysis</h2>
+									<h2 class="major">as Data Analysis</h2>
 									<p>
 										More than 10 years experience in BI(business intelligent) development for variouse business needs including retail management, customer relationship management, marketing analysis, production management, supply chain management, financial repot and more.
 									</p>
@@ -75,7 +75,7 @@
 							<div class="inner">
 								<a href="#" class="image"><img src="images/data_scientist.png" style="width:150px;" alt="" /></a>
 								<div class="content">
-									<h2 class="major">Data Science</h2>
+									<h2 class="major">as Data Science</h2>
 									<p>
 										Create end-to-end dataflow for Machine learning devlopment from data preparation, feature engineering, model creation, model evaluation. Maintain full  process of machine life cycle via DevOps process. Develop verious AI infrastructures including AIas, SaaS, PaaS, IaaS, Edge deployment.
 									</p>
@@ -97,7 +97,7 @@
 							<div class="inner">
 								<a href="#" class="image"><img src="images/data_engineer.png" style="width:150px;" alt="" /></a>
 								<div class="content">
-									<h2 class="major">Data Engineer</h2>
+									<h2 class="major">as Data Engineer</h2>
 									<p>Develop ETL dataflow system in various infra-structure including on-premise, cloud, hybrid and distributed compting.</p>
 									<p>SQL server, MySQL, Dataflows, Databricks </p>
 									<a href="projects.html" class="special">Learn more</a>
@@ -110,7 +110,7 @@
 						<div class="inner">
 							<a href="#" class="image"><img src="images/web_developer.png" style="width:150px;" alt="" /></a>
 							<div class="content">
-								<h2 class="major">Web Developer</h2>
+								<h2 class="major">as Web Developer</h2>
 								<p>
 									UI, UX, and front-end web developing to achieve responsive designs for cohesive user experience. <br>
                                     Create statics website and CMS based website.
@@ -129,7 +129,7 @@
 						<div class="inner">
 							<a href="#" class="image"><img src="images/cloud_engineer.png" style="width:150px;" alt="" /></a>
 							<div class="content">
-								<h2 class="major">Cloud Engineer</h2>
+								<h2 class="major">as Cloud Engineer</h2>
 								<p>Design and build secured cloud structure to support BI and AI platform.</p>
 								<p>Azure (VM, Compute, App Service, Kubernetes Service,VNets, Blob Storage, SQL Database)</p>
 								<p>Google (Cloud Storage, BigQuery)</p>
