Add page transition button

--- a/contacts.html
+++ b/contacts.html
@@ -91,13 +91,25 @@
 								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/jingwora</a></li>
 								<li class="icon brands fa-instagram"><a href="#">instagram.com/jingwora</a></li>
 							</ul>
+
+							<div style="
+							display: flex;
+							flex-direction: column;
+							align-items: center;">
+							   <dev style="display: inline-block;">
+									<button onclick="document.location = 'contents.html'"> ＜ </button>　　　　　　　　<button onclick="document.location = 'index.html'"> ＞ </button>  
+								</dev>
+							</div>
+
+
 							<ul class="copyright">
 								<li>&copy; Jingwora All rights reserved.</li>
 							</ul>
 						</div>
 					</section>
-
 			</div>
+
+
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
