--- a/contents.html
+++ b/contents.html
@@ -105,6 +105,15 @@
 										</div>
 									</section>
 
+									<div style="
+									display: flex;
+									flex-direction: column;
+									align-items: center;">
+									   <dev style="display: inline-block;">
+											<button onclick="document.location = 'projects.html'"> ＜ </button>　　　　　　　　<button onclick="document.location = 'contacts.html'"> ＞ </button>  
+										</dev>
+									</div>
+
         <!-- Footer -->
 					<section id="footer">
 						<div class="inner">
