--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,8 @@
 							<div class="content" style="text-align: center;">
 								<p>Few of my mocked up AI and BI projects.</p>
 
-								<h2>BI Solutions</h2>
+								<hr>
+								<h2>AI Solutions</h2>
 						
 								<h3>Tableau: Natural Language Processing(NLP)</h3>
 								<p>
@@ -64,7 +65,10 @@
 								<a href="https://public.tableau.com/profile/kritdikoon.woraitthinan#!/vizhome/CallCenterVoiceAnalysis/ConversationAnalysis" target="_blank">
 								<img src="/contents_resources/images/tableau_NLP.png" width="300"></a>
 								<br><br>
-								
+
+								<hr>
+								<h2>BI Solutions</h2>
+
 								<h3>Power BI: Visualiation Library</h3> 
 								<a href="https://community.powerbi.com/t5/Data-Stories-Gallery/PowerBI-Visual-Library/td-p/998398" target="_blank">
 								<img src="/contents_resources/images/powerbi_viz_library.png" width="300"></a>
@@ -78,6 +82,15 @@
 							</div>
 						</div>
 					</section>
+
+					<div style="
+					display: flex;
+					flex-direction: column;
+					align-items: center;">
+					   <dev style="display: inline-block;">
+							<button onclick="document.location = 'skills.html'"> ＜ </button>　　　　　　　　<button onclick="document.location = 'contents.html'"> ＞ </button>  
+					    </dev>
+					</div>
 
         <!-- Footer -->
 		<section id="footer">
