--- a/skills.html
+++ b/skills.html
@@ -137,6 +137,15 @@
 							</div>
 						</div>
 					</section>
+
+					<div style="
+					display: flex;
+					flex-direction: column;
+					align-items: center;">
+					   <dev style="display: inline-block;">
+							<button onclick="document.location = 'index.html'"> ＜ </button>　　　　　　　　<button onclick="document.location = 'projects.html'"> ＞ </button>  
+					    </dev>
+					</div>
 						   
         <!-- Footer -->
 		<section id="footer">
@@ -146,7 +155,6 @@
 						</ul>
 			</div>
 		</section>
-
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
