--- a/index.html
+++ b/index.html
@@ -51,7 +51,16 @@
       </h2>
       <hr style="border: 1px solid #00356B;">
       <h2 class="typing">Nice to meet everyone.</h2>
+      <br><br>
+      
+      <div style="display: flex;
+      flex-direction: column;
+      align-items: center;">
+      <button onclick="document.location = 'skills.html'"> ＞ </button> 
+      </div>
+
     </div>
+
 
 		<!-- Scripts -->
     <script  src="assets/js/animation_typing.js"></script>
