Change button size

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
       <hr style="border: 1px solid #00356B;">
       <h2 class="typing">Nice to meet everyone.</h2>
       <br><br>
-      
+
       <div style="display: flex;
       flex-direction: column;
       align-items: center;">
-      <button onclick="document.location = 'skills.html'"> ＞ </button> 
+      <button onclick="document.location = 'skills.html'" style="width:80px;"> ＞ </button> 
       </div>
 
     </div>
