Edit page transition button size

--- a/skills.html
+++ b/skills.html
@@ -143,7 +143,7 @@
 					flex-direction: column;
 					align-items: center;">
 					   <dev style="display: inline-block;">
-							<button onclick="document.location = 'index.html'"> ＜ </button>　　　　　　　　<button onclick="document.location = 'projects.html'"> ＞ </button>  
+							<button onclick="document.location = 'index.html'" style="width:80px;"> ＜ </button>　　　　　　　　<button onclick="document.location = 'projects.html'" style="width:80px;"> ＞ </button>  
 					    </dev>
 					</div>
 						   
