--- a/contacts.html
+++ b/contacts.html
@@ -97,7 +97,7 @@
 							flex-direction: column;
 							align-items: center;">
 							   <dev style="display: inline-block;">
-									<button onclick="document.location = 'contents.html'"> ＜ </button>　　　　　　　　<button onclick="document.location = 'index.html'"> ＞ </button>  
+									<button onclick="document.location = 'contents.html'" style="width:80px;"> ＜ </button>　　　　　　　　<button onclick="document.location = 'index.html'" style="width:80px;"> ＞ </button>  
 								</dev>
 							</div>
 
