--- a/contents.html
+++ b/contents.html
@@ -110,7 +110,7 @@
 									flex-direction: column;
 									align-items: center;">
 									   <dev style="display: inline-block;">
-											<button onclick="document.location = 'projects.html'"> ＜ </button>　　　　　　　　<button onclick="document.location = 'contacts.html'"> ＞ </button>  
+											<button onclick="document.location = 'projects.html'" style="width:80px;"> ＜ </button>　　　　　　　　<button onclick="document.location = 'contacts.html'" style="width:80px;"> ＞ </button>  
 										</dev>
 									</div>
 
