--- a/projects.html
+++ b/projects.html
@@ -88,7 +88,7 @@
 					flex-direction: column;
 					align-items: center;">
 					   <dev style="display: inline-block;">
-							<button onclick="document.location = 'skills.html'"> ＜ </button>　　　　　　　　<button onclick="document.location = 'contents.html'"> ＞ </button>  
+							<button onclick="document.location = 'skills.html'" style="width:80px;"> ＜ </button>　　　　　　　　<button onclick="document.location = 'contents.html'" style="width:80px;"> ＞ </button>  
 					    </dev>
 					</div>
 
