Delete contat form

--- a/contents.html
+++ b/contents.html
@@ -105,6 +105,42 @@
 										</div>
 									</section>
 
+									<section>
+										<h1>Useful Links</h1>
+										<div class="table-wrapper">
+											<table class="alt">
+												<thead>
+													<tr>
+														<th>Topics</th>
+														<th>Links</th>
+													</tr>
+												</thead>
+												<tbody>
+													<tr>
+														<td>Item One</td>
+														<td>Link</td>
+													</tr>
+													<tr>
+														<td>Item Two</td>
+														<td>Link</td>
+													</tr>
+													<tr>
+														<td>Item Three</td>
+														<td>Link</td>
+													</tr>
+													<tr>
+														<td>Item Four</td>
+														<td>Link</td>
+													</tr>
+													<tr>
+														<td>Item Five</td>
+														<td>Link</td>
+													</tr>
+												</tbody>
+											</table>
+										</div>
+									</section>
+
 									<div style="
 									display: flex;
 									flex-direction: column;
