--- a/contacts.html
+++ b/contacts.html
@@ -60,30 +60,9 @@
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
-							<p>Message.</p>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
 							<ul class="contact">
 								<li class="icon solid fa-home">
-									Tokyo<br />
-									Japan
+									Tokyo Japan
 								</li>
 								<li class="icon solid fa-phone">zoom: jingwora@gmail.com</li>
 								<li class="icon solid fa-envelope"><a href="#">jingwora@gmail.com</a></li>
