--- a/contents.html
+++ b/contents.html
@@ -77,27 +77,27 @@
 												<tbody>
 													<tr>
 														<td>Item One</td>
-														<td>Ante turpis integer aliquet porttitor.</td>
+														<td>Description</td>
 														<td>Link</td>
 													</tr>
 													<tr>
 														<td>Item Two</td>
-														<td>Vis ac commodo adipiscing arcu aliquet.</td>
+														<td>Description</td>
 														<td>Link</td>
 													</tr>
 													<tr>
 														<td>Item Three</td>
-														<td> Morbi faucibus arcu accumsan lorem.</td>
+														<td>Description</td>
 														<td>Link</td>
 													</tr>
 													<tr>
 														<td>Item Four</td>
-														<td>Vitae integer tempus condimentum.</td>
+														<td>Description</td>
 														<td>Link</td>
 													</tr>
 													<tr>
 														<td>Item Five</td>
-														<td>Ante turpis integer aliquet porttitor.</td>
+														<td>Description</td>
 														<td>Link</td>
 													</tr>
 												</tbody>
