--- a/contents.html
+++ b/contents.html
@@ -63,41 +63,43 @@
 										<img src="/contents_resources/icons/logo_sklearn.png" width="43"></a>
 									</section><br><br>
 
+									<h1 class="major">Articales</h1>
+
 									<section>
-										<h1>Articles</h1>
+										<h1>Python</h1>
 										<div class="table-wrapper">
 											<table class="alt">
 												<thead>
 													<tr>
 														<th>Name</th>
-														<th>Description</th>
+														<th>Tags</th>
 														<th>Links</th>
 													</tr>
 												</thead>
 												<tbody>
 													<tr>
-														<td>Item One</td>
-														<td>Description</td>
-														<td>Link</td>
+														<td>Python Clean Code</td>
+														<td>Production Python</td>
+														<td><a href="contents/articles/Python_Clean_Code.html" target="_blank">Link</a></td>
 													</tr>
 													<tr>
 														<td>Item Two</td>
-														<td>Description</td>
+														<td>Tags</td>
 														<td>Link</td>
 													</tr>
 													<tr>
 														<td>Item Three</td>
-														<td>Description</td>
+														<td>Tags</td>
 														<td>Link</td>
 													</tr>
 													<tr>
 														<td>Item Four</td>
-														<td>Description</td>
+														<td>Tags</td>
 														<td>Link</td>
 													</tr>
 													<tr>
 														<td>Item Five</td>
-														<td>Description</td>
+														<td>Tags</td>
 														<td>Link</td>
 													</tr>
 												</tbody>
@@ -111,29 +113,35 @@
 											<table class="alt">
 												<thead>
 													<tr>
-														<th>Topics</th>
+														<th>Name</th>
+														<th>Tags</th>
 														<th>Links</th>
 													</tr>
 												</thead>
 												<tbody>
 													<tr>
 														<td>Item One</td>
+														<td>Tags</td>
 														<td>Link</td>
 													</tr>
 													<tr>
 														<td>Item Two</td>
+														<td>Tags</td>
 														<td>Link</td>
 													</tr>
 													<tr>
 														<td>Item Three</td>
+														<td>Tags</td>
 														<td>Link</td>
 													</tr>
 													<tr>
 														<td>Item Four</td>
+														<td>Tags</td>
 														<td>Link</td>
 													</tr>
 													<tr>
 														<td>Item Five</td>
+														<td>Tags</td>
 														<td>Link</td>
 													</tr>
 												</tbody>
