--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/animation_typing.css">
     <link rel="stylesheet" href="assets/css/animation_particles_background.css">
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <link rel="icon" 
+      type="image/png" 
+      href="images/J_favicon/favicon.ico">
   </head>
           
 	<body class="is-preload">
