--- a/contacts.html
+++ b/contacts.html
@@ -6,8 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/animation_coffee.css" />
-
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="icon" 
+		type="image/png" 
+		href="images/J_favicon/favicon.ico">
 	</head>
 	<body class="is-preload">
 
